# asr-test

./: .env.example  .gitattributes  .gitignore  AGENT_SETUP.md  DESIGN.md  README.md  pyproject.toml  requiremens.md  requirements.txt
app/: artifact_id.py  config.py  main.py  main_dependencies.py
app/routes/: __init__.py  capabilities.py  conversion_jobs.py  frontend.py  minutes.py  transcribe.py  upload.py
app/schemas/: __init__.py  conversion_job.py  minutes.py  transcript.py
app/services/: alignment_service.py  asr_service.py  audio_service.py  conversion_job_service.py  diarization_service.py  llm_service.py  minutes_service.py  storage_service.py
app/static/: app.js  base.css  index.html  output.css  payloads.js  progress.js  responsive.css  result-view.js  styles.css
app/workers/: pyannote_diarization_worker.py  qwen3_asr_worker.py  qwen3_forced_aligner_worker.py
models/Qwen3-ASR-0.6B-4bit/: config.json  model.safetensors  model.safetensors.index.json
models/Qwen3-ForcedAligner-0.6B-8bit/: config.json  model.safetensors  model.safetensors.index.json
scripts/: qa_http.sh  test_asr.py  test_llm.py
tests/: conftest.py  test_alignment_service.py  test_api_pipeline.py  test_capabilities.py  test_config.py  test_conversion_job_options.py  test_conversion_jobs.py  test_diarization_alignment.py  test_frontend.py  test_pyannote_worker_device.py  test_qwen3_asr_worker.py  test_security.py
